--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         <h2>Places I've Been ✈️</h2>
         <ul class="travel-list">
-            <li>🇨🇳 China - Beijing, Harbin, Shanghai, Hangzhou, Guangzhou</li>
+            <li>🇨🇳 China - Guangzhou, Beijing, Harbin, Shanghai, Hangzhou</li>
             <li>🇭🇰 Hong Kong</li>
             <li>🇯🇵 Japan - Tokyo, Kyoto, Osaka</li>
         </ul>
